--- a/manifest.json
+++ b/manifest.json
@@ -16,9 +16,10 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "host_permissions": ["http://localhost:3000/*"],
+  "host_permissions": ["http://162.232.250.170:42069/*"],
   "permissions": [
-	  "contextMenus"
+	  "contextMenus",
+    "tabs"
   ],
   "content_scripts": [
     {
